something must be change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "liveServer.settings.multiRootWorkspaceName": "website-Wydrowisko",
+
+
+    "editor.formatOnSave": true,
+    "liveServer.settings.CustomBrowser": "chrome"
 }
